--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <!--<script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
--->
-  <!-- include spec files here... -->
+  <script src="src/Player.js"></script>
+  <script src="src/Board.js"></script>
+
+    <!-- include spec files here... -->
 <!--  <script src="spec/SpecHelper.js"></script>-->
   <script src="spec/TictactoeSpec.js"></script>
 
